{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 145,
  "lineage": "9fa9acb3-5700-dd66-e245-f3e11088cf55",
  "resources": [
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:security-group/sg-07065690b22cb4507",
            "description": "Security group for ElastiCache Redis cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07065690b22cb4507",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from EKS nodes",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00762931d0e17a60f"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "aws-gitops-pipeline-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "287043460305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-gitops-pipeline-dev-redis-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-redis-sg",
              "Project": "aws-gitops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_policy.ebs_csi_driver",
            "module.eks.aws_iam_role.ebs_csi_driver",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node_group",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_driver",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_container_registry_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.data.tls_certificate.eks",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "name": "jenkins"
                },
                "name": "jenkins",
                "resource_version": "1592",
                "uid": "5a7fb62b-7653-4f8e-97b2-b1247c4f3109"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "jenkins"
          },
          "dependencies": [
            "module.ecr.aws_ecr_lifecycle_policy.main",
            "module.ecr.aws_ecr_repository.main",
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_policy.ebs_csi_driver",
            "module.eks.aws_iam_role.ebs_csi_driver",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node_group",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_driver",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_container_registry_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.data.tls_certificate.eks",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:security-group/sg-0771bb3d2a1b9153c",
            "description": "Security group for RDS MySQL instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0771bb3d2a1b9153c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EKS nodes",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00762931d0e17a60f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aws-gitops-pipeline-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "287043460305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-gitops-pipeline-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-rds-sg",
              "Project": "aws-gitops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_eks_addon.ebs_csi_driver",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_openid_connect_provider.eks",
            "module.eks.aws_iam_policy.ebs_csi_driver",
            "module.eks.aws_iam_role.ebs_csi_driver",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node_group",
            "module.eks.aws_iam_role_policy_attachment.ebs_csi_driver",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_container_registry_policy",
            "module.eks.aws_iam_role_policy_attachment.eks_vpc_resource_controller",
            "module.eks.aws_iam_role_policy_attachment.eks_worker_node_policy",
            "module.eks.data.tls_certificate.eks",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e22d2b58a02c3b1d",
            "arn": "arn:aws:ec2:us-east-1:287043460305:elastic-ip/eipalloc-0e22d2b58a02c3b1d",
            "association_id": "eipassoc-0e0e9b49612d7766b",
            "domain": "vpc",
            "id": "eipalloc-0e22d2b58a02c3b1d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ebc419a40bb8ab9f",
            "private_dns": "ip-10-0-1-48.ec2.internal",
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-34-237-35-146.compute-1.amazonaws.com",
            "public_ip": "34.237.35.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-nat-eip",
              "Project": "aws-gitops-pipeline"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:internet-gateway/igw-0e18b1c8d227e8319",
            "id": "igw-0e18b1c8d227e8319",
            "owner_id": "287043460305",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-igw",
              "Project": "aws-gitops-pipeline"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e22d2b58a02c3b1d",
            "association_id": "eipassoc-0e0e9b49612d7766b",
            "connectivity_type": "public",
            "id": "nat-0e93e65db3b14912d",
            "network_interface_id": "eni-0ebc419a40bb8ab9f",
            "private_ip": "10.0.1.48",
            "public_ip": "34.237.35.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07a99edc9ebafa820",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-nat-gateway"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-nat-gateway",
              "Project": "aws-gitops-pipeline"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:route-table/rtb-073f6cbdc34e34b5d",
            "id": "rtb-073f6cbdc34e34b5d",
            "owner_id": "287043460305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e93e65db3b14912d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-gitops-pipeline-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-private-rt",
              "Project": "aws-gitops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:route-table/rtb-0143702b297a8174f",
            "id": "rtb-0143702b297a8174f",
            "owner_id": "287043460305",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e18b1c8d227e8319",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-gitops-pipeline-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-public-rt",
              "Project": "aws-gitops-pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0652bd0b99d386ce7",
            "route_table_id": "rtb-073f6cbdc34e34b5d",
            "subnet_id": "subnet-06fb0d85c39df0ea0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0728fef128ccd06a4",
            "route_table_id": "rtb-073f6cbdc34e34b5d",
            "subnet_id": "subnet-01aebe1e468fff599"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003735ba3fe3b1278",
            "route_table_id": "rtb-073f6cbdc34e34b5d",
            "subnet_id": "subnet-07b4b2443cccb6e52"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a58acee8405429aa",
            "route_table_id": "rtb-0143702b297a8174f",
            "subnet_id": "subnet-07a99edc9ebafa820"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bf9ddeb91dde0d7",
            "route_table_id": "rtb-0143702b297a8174f",
            "subnet_id": "subnet-02f5d2225075c3445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0ce5c4dbde8d01f",
            "route_table_id": "rtb-0143702b297a8174f",
            "subnet_id": "subnet-0526171eac80ecb1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-06fb0d85c39df0ea0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb0d85c39df0ea0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-private-subnet-1",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-private-subnet-1",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-01aebe1e468fff599",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aebe1e468fff599",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-private-subnet-2",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-private-subnet-2",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-07b4b2443cccb6e52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b4b2443cccb6e52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-private-subnet-3",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-private-subnet-3",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-07a99edc9ebafa820",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a99edc9ebafa820",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-public-subnet-1",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-public-subnet-1",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-02f5d2225075c3445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f5d2225075c3445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-public-subnet-2",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-public-subnet-2",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:subnet/subnet-0526171eac80ecb1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0526171eac80ecb1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287043460305",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-public-subnet-3",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-public-subnet-3",
              "Project": "aws-gitops-pipeline",
              "kubernetes.io/cluster/aws-gitops-pipeline-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-088ff4f0769867298"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287043460305:vpc/vpc-088ff4f0769867298",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b5cadb64ee5c847",
            "default_route_table_id": "rtb-05f72e6192a94f4e4",
            "default_security_group_id": "sg-082ad6d567f16cfbd",
            "dhcp_options_id": "dopt-0dfc98a27cdccea1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088ff4f0769867298",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05f72e6192a94f4e4",
            "owner_id": "287043460305",
            "tags": {
              "Name": "aws-gitops-pipeline-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "aws-gitops-pipeline-dev-vpc",
              "Project": "aws-gitops-pipeline"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}